2005-11-27  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	* io/write.c (namelist_write): Correct type in previous
	commit.

2005-11-27  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR libfortran/24919
	* io/list_read.c (eat_separator, finish_separator,
	read_character): Handle CRLF separators correctly during reads.
	(nml_query): Use the HAVE_CRLF macro to print adequate newlines.
	* io/io.h (st_parameter_dt): Add comment about the possible
	values for sf_seen_eor.
	* io/unix.c (tempfile, regular_file): HAVE_CRLF doesn't imply
	that O_BINARY is defined, so we add that condition.
	(stream_at_bof): Fix typo in comment.
	* io/transfer.c (read_sf): Handle correctly CRLF, setting
	sf_seen_eor value to 2 instead of 1.
	(formatted_transfer_scalar): Use the sf_seen_eor value to
	handle CRLF the right way.
	* io/write.c (nml_write_obj, namelist_write): Use CRLF as newline
	when HAVE_CRLF is defined.

2005-11-26  Richard Henderson  <rth@redhat.com>

	* io/list_read.c (nml_parse_qualifier): Use ssize_t instead of int
	in dtp->u.p.value.

2005-11-26  Janne Blomqvist  <jb@gcc.gnu.org>

	PR libgfortran/24945
	* io/open.c (edit_modes): Check for STATUS_UNKNOWN flag.
	
2005-11-25  Richard Henderson  <rth@redhat.com>

	* io/list_read.c (nml_parse_qualifier): Use memcpy to extract
	values from dtp->u.p.value.
	* io/io.h (struct st_parameter_dt): Change reversion_flag, first_item,
	seen_dollar, sf_seen_eor, eor_condition, no_leading_blank, char_flag,
	input_complete, at_eol, comma_flag, namelist_mode, nml_read_error to
	single-bit fields.  Move value to where it'll be at least pointer
	aligned.

2005-11-23  Alan Modra  <amodra@bigpond.net.au>

	* io/open.c (new_unit): Use the right unit number when checking
	for stdin, stdout, stderr.

2005-11-22  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/24794
	* io/list_read.c (read_character): Add auto completion on short
	namelist reads.

2005-11-21  David Edelsohn  <edelsohn@gnu.org>
