@@ -1,3 +1,9 @@
+2005-11-27  David Edelsohn  <edelsohn@gnu.org>
+
+	* intrinsics/random.c: Include config.h
+	* io/size_from_kind.c: Include config.h and libgfortran.h
+	* io/io.h: Revert 2005-11-21 change.
+
 2005-11-27  Francois-Xavier Coudert  <coudert@clipper.ens.fr>
 
 	* io/write.c (namelist_write): Correct type in previous
